# odp

./: .env.example  .gitignore  01_PRD.md  02_SRD.md  03_PDR.md  04_ICD.md  04_TCD.md  05_DDR.md  06_VV_PLAN.md  07_SECURITY.md  08_DECISIONS.md  09_RUNBOOK.md  10_SLOS.md  11_CONFIG_SECRETS.md  12_HANDOFF.md  12_LLM_INTEGRATION.md  13_GITHUB_INTEGRATION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/web/: package-lock.json  vite.config.ts
apps/web/src/: App.tsx  index.css
docs/: DB_SCHEMA.md  DEPLOYMENT.md  FAT.md  FINAL_REPORT.md  HOW_TO_RUN.md  INDEX.md  MILESTONE_1.md  MILESTONE_10.md  MILESTONE_11.md  MILESTONE_12.md  MILESTONE_13.md  MILESTONE_14.md  MILESTONE_2.md  MILESTONE_3.md  MILESTONE_4.md  MILESTONE_5.md  MILESTONE_6.md  MILESTONE_7.md  MILESTONE_8.md  MILESTONE_9.md  PROCESS.md  ROADMAP.md  SECURITY_HARDENING.md  UI_SPEC.md
docs/milestone_1/: ROADMAP.md  SCOPE_OF_WORK.md  VERIFICATION_LOG.md
docs/templates/: ROADMAP.md  SCOPE_OF_WORK.md  VERIFICATION_LOG.md
infra/: Caddyfile  docker-compose.yml
infra/logrotate.d/: odp
infra/postgres/: init.sql
infra/systemd/: odp-orchestrator.service  odp-redis.service
scripts/: backup.sh  restore.sh  run_orchestrator.sh  screenshot_ui.py
services/agents/odp_agent/: main.py
services/orchestrator/odp_orchestrator/: __main__.py  agent_runner.py  api.py  db.py  embeddings.py  events.py  github.py  (+4 more)
tests/: test_milestone_1.py  test_milestone_10.py  test_milestone_11.py  test_milestone_12.py  test_milestone_13.py  test_milestone_14.py  test_milestone_2.py  test_milestone_3.py  test_milestone_4.py  test_milestone_5.py  test_milestone_6.py  test_milestone_7.py  test_milestone_8.py  test_milestone_9.py
(+19 files in other folders)
