[project]
name = "odp"
version = "0.1.0"
description = "Orchestrated Dev Platform (ODP)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OpenClaw" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "redis>=5.0",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "websockets>=12.0",
  "ruff>=0.6",

  # Dockerless test harness
  "fakeredis>=2.23",
  "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]
exclude = ["tests*", "docs*", "apps*", "infra*", "runtime*", "scripts*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
